[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>ARTICLE-one</title>
+</head>    
+<body>
+    <a href="/">HOme</a>
+    <h2>ARTICLE_one </h2>
+</body>
+</html>
