[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,7 +4,22 @@
     <title>ARTICLE-one</title>
 </head>    
 <body>
+    <div>
     <a href="/">HOme</a>
+    </div>
+    <hr>
+    <div>
     <h2>ARTICLE_one </h2>
+    </div>
+    <div>
+        <p>
+            this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.
+        </p>
+    </div>
+    <div>
+        <p>
+            this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.
+        </p>
+    </div>
 </body>
 </html>
