[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>ARTICLE-one</title>
+    <meta name="viewport"  content="width-device-width,initia-scale-1"/>
 </head>    
 <body>
     <div>
