--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,1 +1,27 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+    <title>ARTICLE-three</title>
+    <meta name="viewport"  content="width-device-width,initia-scale-1"/>
+</head>    
+<body>
+    <div>
+    <a href="/">HOme</a>
+    </div>
+    <hr>
+    <div>
+    <h2>ARTICLE_three </h2>
+    </div>
+    <div>
+        <p>
+            this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.
+        </p>
+    </div>
+    <div>
+        <p>
+            this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.
+        </p>
+    </div>
+</body>
+</html>
