--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,6 +5,7 @@
     <meta name="viewport"  content="width-device-width,initia-scale-1"/>
 </head>    
 <body>
+    <div class="container">
     <div>
     <a href="/">HOme</a>
     </div>
@@ -21,6 +22,7 @@
         <p>
             this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.
         </p>
+    </div>
     </div>
 </body>
 </html>
