--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -6,6 +6,7 @@
     <meta name="viewport"  content="width-device-width,initia-scale-1"/>
 </head>    
 <body>
+    <div class="container">
     <div>
     <a href="/">HOme</a>
     </div>
@@ -22,6 +23,7 @@
         <p>
             this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.this is a paragraph.
         </p>
+    </div>
     </div>
 </body>
 </html>
