--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+     <link href="/ui/style.css" rel="stylesheet" />
     <title>ARTICLE-one</title>
     <meta name="viewport"  content="width-device-width,initia-scale-1"/>
 </head>    
