--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+     <link href="/ui/style.css" rel="stylesheet" />
     <title>ARTICLE-three</title>
     <meta name="viewport"  content="width-device-width,initia-scale-1"/>
 </head>    
