[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            hi kshitij i m your webapp......
+            Internship ki shifarish lga do......
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
