--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Internship ki shifarish lga do......
+            Internship ki shifarish lga do!    Plzzzzzzzzzzz......
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
